<resources>
    <string name="app_name">"PixelGym"</string>
    <string name="welcome_title">"Bienvenido. Login"</string>
    <string name="hint_username">"Usuario"</string>
    <string name="hint_password">"Contraseña"</string>
    <string name="hint_confirm_password">"Confirmar contraseña"</string>
    <string name="hint_birthdate">"Fecha de nacimiento"</string>
    <string name="action_login">"Iniciar Sesión"</string>
    <string name="action_login_google">"Iniciar Sesión en Google"</string>
    <string name="action_create_account">"Crear cuenta"</string>
    <string name="register_link_text">"¿No tienes cuenta? Crea una"</string>
    <string name="login_success">"Login Correcto. Bienvenido!"</string>
    <string name="login_error">"Credenciales incorrectas"</string>
    <string name="login_error_field">"Usuario o contraseña incorrectos"</string>
    <string name="snackbar_action_close">"CERRAR"</string>
    <string name="feature_not_implemented">"Funcionalidad no implementada aún"</string>
    <string name="nav_to_register">"Navegando al registro..."</string>
    <string name="password_mismatch">"Las contraseñas no coinciden"</string>
    <string name="fill_date">"Selecciona una fecha"</string>
    <string name="register_success_message">"Registro completado"</string>
    <string name="text_artista">Artista</string>
    <string name="text_ano">Año</string>
    <string name="text_favorito">Favorito</string>
    <string name="text_nombre_sala">Título</string>
    <string name="tab_todos">Todas las zonas</string>
    <string name="tab_favoritos">Favoritos</string>
    <string name="text_imagen_sala">Imagen zona</string>
    <string name="fav">FAV</string>
    <string name="user_image">Imagen usuario</string>
    <string name="user">Usuario</string>
    <string name="navigation_drawer_open">Desplegar menú</string>
    <string name="navigation_drawer_close">Plegar Menú</string>
    <string name="lista">Catálogo</string>
    <string name="contacto">Contacto</string>
    <string name="preferencias">Preferencias</string>
    <string name="buscar">Buscar</string>
    <string name="ordenar">Ordenar</string>
    <string name="mas">Más</string>
    <string name="logout">Cerrar sesión</string>
    <string name="contacta">Contacta con nosotros</string>
    <string name="llamarTelefono">Llamar por teléfono</string>
    <string name="enviarMensaje">Enviar un mensaje</string>
    <string name="enviarCorreo">Enviar un correo</string>
    <string name="opciones">Opciones</string>
    <string name="crearNuevo">Nuevo</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="modoOscuro">Modo oscuro</string>
    <string name="idioma">Idioma</string>
    <string name="hintBuscar">Buscar zona...</string>
    <string name="cierraSesion">Para salir cierra sesión</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="estado_confirmada">Confirmada</string>
    <string name="default_recurso_name">Sala</string>
    <string name="placeholder_fecha">1 de Enero 2040</string>
    <string name="recurso">Recurso</string>
    <string name="reserva_guardada">Reserva guardada con éxito</string>
    <string name="error_guardar">Error al guardar la reserva</string>
    <string name="campos_incompletos">Por favor, completa todos los campos</string>
    <string name="titulo_nueva_reserva">Nueva Reserva</string>
    <string name="hint_selecciona_fecha">Selecciona Fecha</string>
    <string name="hint_horario_disponible">Horario Disponible</string>
    <string name="btn_confirmar_reserva">CONFIRMAR RESERVA</string>
    <!-- REGISTRO (DEFAULT - ES) -->
    <string name="hint_name">Nombre</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_tarifa">Tarifa</string>

    <string name="tarifa_standard">Standard</string>
    <string name="tarifa_duo">Duo</string>
    <string name="tarifa_premium">Premium</string>

    <string name="error_email">Email no válido</string>
    <string name="error_name_letters">El nombre solo puede tener letras y espacios</string>
    <string name="error_phone_numbers">El teléfono solo puede tener números</string>
    <string name="error_phone_len">El teléfono debe tener 9 números</string>
    <string name="error_password_len">La contraseña debe tener entre 5 y 7 caracteres</string>
    <string name="error_tarifa">Selecciona una tarifa</string>


    <string name="action_select_photo">"Seleccionar foto"</string>
    <string name="snackbar_invalid_data">"Datos incorrectos"</string>
    <string name="snackbar_account_created">"Cuenta creada"</string>
    <string name="snackbar_go_login">"Ir al login"</string>
</resources>